--- a/markup/pages/vacancy.html
+++ b/markup/pages/vacancy.html
@@ -42,6 +42,149 @@
                             <span class="uk-display-block">Зарплата: от 5 000 грн</span>
                         </div>
                     </div>
+                    <div class="swiper-container uk-video-holders">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper uk-grid uk-child-width-1-3@s uk-grid-match" data-uk-grid data-uk-lightbox>
+                            <!-- Slides -->
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                    <div class="uk-video-background">
+                                        <img src="static/img/content/article-img-5.jpg" alt="">
+                                    </div>
+                                    <div class="uk-video-overlay"></div>
+                                    <div class="uk-video-foreground">
+                                        <div class="uk-btn-video-link">
+                                            <svg class="icon__play-circle" width="32px" height="32px">
+                                                <use xlink:href="#play-circle"></use>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            
+                        </div>
+
+                    </div>
                     <h5>Мы предлагаем</h5>
                     <ul class="uk-list">
                         <li>Работу в официальном дилерском центре Mercedes-Benz</li>
