--- a/builds/contacts.html
+++ b/builds/contacts.html
@@ -16,7 +16,7 @@
 
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/maindrfcm.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/main8umah8.min.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
 
         <meta property="og:title" content="" />
@@ -1171,9 +1171,9 @@
 
                 <div class="uk-hero uk-hero-contacts">
                     <div class="uk-hero-background">
-                        <!--<img class="uk-hero-object" src="static/img/content/hero-image-4.jpg" alt="">-->
-                        <iframe class="uk-hero-object" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2965.0824050173574!2d-93.63905729999999!3d41.998507000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sWebFilings%2C+University+Boulevard%2C+Ames%2C+IA!5e0!3m2!1sen!2sus!4v1390839289319"
-                        width="100%" height="200" frameborder="0" style="border:0"></iframe>
+                        <img class="uk-hero-object" src="static/img/content/hero-image-4.jpg" alt="">
+                        <!--<iframe class="uk-hero-object" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2965.0824050173574!2d-93.63905729999999!3d41.998507000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sWebFilings%2C+University+Boulevard%2C+Ames%2C+IA!5e0!3m2!1sen!2sus!4v1390839289319"
+                        width="100%" height="200" frameborder="0" style="border:0"></iframe>-->
                     </div>
                     <div class="uk-section-background-decore">
                         <svg class="icon__bg-decore-8" width="494px" height="403px">
@@ -1704,7 +1704,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/js/uikit-icons.min.js"></script>
 
         <!-- Main scripts. You can replace it, but I recommend you to leave it here     -->
-        <script src="static/js/maindrfcm.min.js"></script>
+        <script src="static/js/main8umah8.min.js"></script>
     </body>
 
 </html>
