--- a/builds/park-drive.html
+++ b/builds/park-drive.html
@@ -16,7 +16,7 @@
 
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/maindrfcm.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/main8umah8.min.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
 
         <meta property="og:title" content="" />
@@ -1595,7 +1595,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/js/uikit-icons.min.js"></script>
 
         <!-- Main scripts. You can replace it, but I recommend you to leave it here     -->
-        <script src="static/js/maindrfcm.min.js"></script>
+        <script src="static/js/main8umah8.min.js"></script>
     </body>
 
 </html>
