--- a/builds/vacancy.html
+++ b/builds/vacancy.html
@@ -16,7 +16,7 @@
 
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/maindrfcm.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/main8umah8.min.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
 
         <meta property="og:title" content="" />
@@ -1386,6 +1386,149 @@
                                 <span class="uk-display-block">Зарплата: от 5 000 грн</span>
                             </div>
                         </div>
+                        <div class="swiper-container uk-video-holders">
+                            <!-- Additional required wrapper -->
+                            <div class="swiper-wrapper uk-grid uk-child-width-1-3@s uk-grid-match" data-uk-grid data-uk-lightbox>
+                                <!-- Slides -->
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="https://quirksmode.org/html5/videos/big_buck_bunny.mp4" data-caption="Video" class="uk-video-holder uk-is-hover uk-border-rounded">
+                                        <div class="uk-video-background">
+                                            <img src="static/img/content/article-img-5.jpg" alt="">
+                                        </div>
+                                        <div class="uk-video-overlay"></div>
+                                        <div class="uk-video-foreground">
+                                            <div class="uk-btn-video-link">
+                                                <svg class="icon__play-circle" width="32px" height="32px">
+                                                    <use xlink:href="#play-circle"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+
+                            </div>
+
+                        </div>
                         <h5>Мы предлагаем</h5>
                         <ul class="uk-list">
                             <li>Работу в официальном дилерском центре Mercedes-Benz</li>
@@ -1582,7 +1725,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/js/uikit-icons.min.js"></script>
 
         <!-- Main scripts. You can replace it, but I recommend you to leave it here     -->
-        <script src="static/js/maindrfcm.min.js"></script>
+        <script src="static/js/main8umah8.min.js"></script>
     </body>
 
 </html>
