--- a/markup/pages/home.html
+++ b/markup/pages/home.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="uk-hero-footer">
                         <div class="uk-container">
-                            <div class="uk-grid uk-grid-match uk-child-width-1-2@s uk-child-width-1-3@m" data-uk-grid>
+                            <div class="uk-grid uk-grid-match uk-child-width-1-2@s uk-child-width-1-4@m" data-uk-grid>
                                 <div>
                                     <a href="#" class="uk-card uk-card-feature">
                                         <div class="uk-card-left">
@@ -59,7 +59,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="uk-width-expand">
+                                <div >
                                     <a href="#" class="uk-card uk-card-feature">
                                         <div class="uk-card-left">
                                             <div class="uk-card-icon">
@@ -70,7 +70,19 @@
                                             <div class="uk-card-title">Финансовый сервис</div>
                                         </div>
                                     </a>
-                                </div>
+																</div>
+																<div class="uk-width-expand">
+																	<a href="#" class="uk-card uk-card-feature">
+																			<div class="uk-card-left">
+																					<div class="uk-card-icon">
+																							{{Icon iconName="report"}}
+																					</div>
+																			</div>
+																			<div class="uk-card-body">
+																					<div class="uk-card-title">Корпоративные продажи</div>
+																			</div>
+																	</a>
+																</div>
                             </div>
                         </div>
                     </div>
@@ -80,11 +92,11 @@
             <div class="uk-section uk-section-xlarge uk-section-brands-highlight">
                 <div class="uk-section-foreground">
                     <div class="uk-container">
-                        <div class="swiper-container uk-brands-highlight">
+                        <div class="uk-brands-highlight">
                             <!-- Additional required wrapper -->
-                            <div class="swiper-wrapper uk-grid uk-child-width-1-5@s uk-grid-match" data-uk-grid>
+                            <div class=" uk-grid uk-child-width-1-2 uk-child-width-1-4@s uk-grid-match" data-uk-grid>
                                 <!-- Slides -->
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/mercedes-benz.png" alt="">
@@ -92,7 +104,7 @@
                                         <h5 class="uk-card-title">Mercedes-Benz</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/vw.png" alt="">
@@ -100,7 +112,7 @@
                                         <h5 class="uk-card-title">Volkswagen</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/renault.png" alt="">
@@ -108,7 +120,7 @@
                                         <h5 class="uk-card-title">Renault</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/skoda.png" alt="">
@@ -116,7 +128,7 @@
                                         <h5 class="uk-card-title">Skoda</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/mitsubushi.png" alt="">
@@ -124,7 +136,7 @@
                                         <h5 class="uk-card-title">Mitsubushi</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/mercedes-benz.png" alt="">
@@ -132,7 +144,7 @@
                                         <h5 class="uk-card-title">Mercedes-Benz</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/vw.png" alt="">
@@ -140,7 +152,7 @@
                                         <h5 class="uk-card-title">Volkswagen</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/renault.png" alt="">
@@ -148,7 +160,7 @@
                                         <h5 class="uk-card-title">Renault</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/skoda.png" alt="">
@@ -156,7 +168,7 @@
                                         <h5 class="uk-card-title">Skoda</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/mitsubushi.png" alt="">
@@ -164,7 +176,7 @@
                                         <h5 class="uk-card-title">Mitsubushi</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/mercedes-benz.png" alt="">
@@ -172,7 +184,7 @@
                                         <h5 class="uk-card-title">Mercedes-Benz</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/vw.png" alt="">
@@ -180,7 +192,7 @@
                                         <h5 class="uk-card-title">Volkswagen</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/renault.png" alt="">
@@ -188,7 +200,7 @@
                                         <h5 class="uk-card-title">Renault</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/skoda.png" alt="">
@@ -196,14 +208,22 @@
                                         <h5 class="uk-card-title">Skoda</h5>
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div>
                                     <a href="#" class="uk-card uk-card-brand">
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/mitsubushi.png" alt="">
                                         </div>
                                         <h5 class="uk-card-title">Mitsubushi</h5>
                                     </a>
-                                </div>
+																</div>
+																<div>
+																	<a href="#" class="uk-card uk-card-brand">
+																			<div class="uk-card-img">
+																					<img src="%=static=%img/content/vw.png" alt="">
+																			</div>
+																			<h5 class="uk-card-title">Volkswagen</h5>
+																	</a>
+																</div>
                             </div>
                         </div>
                     </div>
@@ -216,7 +236,7 @@
                 <div class="uk-section-foreground">
                     <div class="uk-container">
                         <div class="uk-heading">
-                            <h2 class="uk-heading-title">Подобрать автомобиль в наличии</h2>
+                            <h2 class="uk-heading-title">Подобрать автомобиль</h2>
                         </div>
                         <form action="#" class="uk-filter uk-filter-cars">
 
@@ -389,7 +409,79 @@
                         </div>
                     </div>
                 </div>
-            </div>
+						</div>
+						
+						<div class="uk-section uk-section-corporate-sales">
+							<div class="uk-section-foreground">
+								<div class="uk-container">
+									<div class="uk-corporate-sales-block">
+										<div class="uk-corporate-sales-block-top uk-grid uk-margin-medium-bottom" data-uk-grid>
+											<h2 class="uk-section-title uk-width-1-2@m">Корпоративные	продажи</h2>
+											<p class="uk-width-1-2@m">Специальные программы ориентированные на комплексное обслуживание автопарков</p>
+										</div>
+										<div class="swiper-container uk-models-hightlight">
+												<!-- Additional required wrapper -->
+												<div class="swiper-wrapper uk-grid uk-child-width-1-3@s uk-grid-match" data-uk-grid>
+														<!-- Slides -->
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="%=static=%img/content/img-9.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="%=static=%img/content/img-10.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="%=static=%img/content/img-9.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+														<div class="swiper-slide">
+																<a href="#" class="uk-card-model">
+																		<div class="uk-card-img">
+																				<img src="%=static=%img/content/img-10.png" alt="car-1">
+																		</div>
+																		<div class="uk-card-body">
+																				<h6 class="uk-card-title">Новый Logan</h6>
+																				<span>от 1 323 013 грн</span>
+																		</div>
+																</a>
+														</div>
+												</div>
+												<!-- If we need pagination -->
+												<div class="swiper-pagination"></div>
+
+												<!-- If we need navigation buttons -->
+												<div class="swiper-button-prev"></div>
+												<div class="swiper-button-next"></div>
+
+												<!-- If we need scrollbar -->
+												<div class="swiper-scrollbar"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 
             <div class="uk-section uk-section-info">
                 <div class="uk-section-foreground">
