--- a/markup/pages/_template.html
+++ b/markup/pages/_template.html
@@ -1,6 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="ru">
-
     <head>
         {{> head/head head.defaults}}
     </head>
@@ -9,20 +8,17 @@
         %=symbols=%
 
         <div class="uk-page">
-
             <div class="uk-page-left">
                 {{> header/header dealers=false}}
             </div>
 
             <div class="uk-page-body">
                 <!-- content -->
-                
+
                 {{> footer/footer visible=true}}
             </div>
-
         </div>
 
         {{> scripts/scripts}}
     </body>
-
 </html>
