--- a/markup/pages/contacts.html
+++ b/markup/pages/contacts.html
@@ -47,7 +47,8 @@
                                 <div class="uk-col-contacts">
                                     <div class="uk-contact-block">
                                         <h6 class="uk-contact-title">Эл. почта</h6>
-                                        <a href="mailto:info@sollyplus.com.ua" class="uk-contact-email">info@sollyplus.com.ua</a>
+                                        <a href="mailto:info@sollyplus.com.ua"
+                                            class="uk-contact-email">info@sollyplus.com.ua</a>
                                     </div>
                                 </div>
                             </div>
@@ -65,13 +66,16 @@
                                     <label><input class="uk-input" type="text" placeholder="Как вас зовут?"></label>
                                 </div>
                                 <div>
-                                    <label><input class="uk-input" type="email" placeholder="Введите ваш e-mail"></label>
+                                    <label><input class="uk-input" type="email"
+                                            placeholder="Введите ваш e-mail"></label>
                                 </div>
                                 <div>
-                                    <label><textarea class="uk-textarea" placeholder="Текст сообщения"></textarea></label>
+                                    <label><textarea class="uk-textarea"
+                                            placeholder="Текст сообщения"></textarea></label>
                                 </div>
                                 <div>
-                                    <button class="uk-button uk-button-primary uk-button-small">Отправить сообщение</button>
+                                    <button class="uk-button uk-button-primary uk-button-small">Отправить
+                                        сообщение</button>
                                 </div>
                             </form>
                         </div>
