--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -84,7 +84,12 @@
                         <li><a href="404.html">404</a></li>
                         <li><a href="modals.html">Modals</a></li>
                         <li><a href="test.html">Test</a></li>
-                        <li><a href="components.html">Components</a></li>  
+                        <li><a href="components.html">Components</a></li>
+                    </ul>
+                    <hr>
+                    <ul>
+                        <li><a href="corporate.html">Corporate</a></li>
+                        <li><a href="models.html">Model row</a></li>
                     </ul>
                 </div>
             </div>
