--- a/builds/index.html
+++ b/builds/index.html
@@ -16,7 +16,7 @@
 
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/main8umah8.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/main.min.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
 
         <meta property="og:title" content="" />
@@ -890,6 +890,19 @@
                 <path d="M21.913 14.772l-8.402-4.83c-0.446-0.256-0.978-0.256-1.424-0s-0.712 0.715-0.712 1.228v9.66c0 0.513 0.266 0.972 0.712 1.228 0.223 0.128 0.467 0.192 0.712 0.192s0.489-0.064 0.712-0.192l8.402-4.83c0.446-0.256 0.712-0.715 0.712-1.228s-0.266-0.972-0.712-1.228z"
                 />
             </symbol>
+            <symbol id="report" viewBox="0 0 36 38">
+                <path d="M28.125 34.7809C28.125 35.092 27.8724 35.3444 27.5625 35.3444H8.4375C8.12756 35.3444 7.875 35.092 7.875 34.7809V31.9635H9V34.2174H27V17.8762H25.875V33.0905H10.125V31.9635H17.4375V25.2016H14.0625V30.8365H12.9375V21.8207H9.5625V30.8365H8.4375V22.9476H5.0625V30.8365H3.9375V18.4397H0.5625V31.9635H6.75V34.7809C6.75 35.713 7.50712 36.4714 8.4375 36.4714H27.5625C28.4929 36.4714 29.25 35.713 29.25 34.7809V17.8762H28.125V34.7809ZM15.1875 26.3286H16.3125V30.8365H15.1875V26.3286ZM2.8125 30.8365H1.6875V19.5667H2.8125V30.8365ZM10.6875 22.9476H11.8125V30.8365H10.6875V22.9476ZM6.1875 24.0746H7.3125V30.8365H6.1875V24.0746Z"
+                fill="#303032" />
+                <path d="M7.875 6.60542C7.875 6.29437 8.12756 6.04193 8.4375 6.04193H14.625V4.91494H13.8049C14.5659 3.54341 16.0104 2.66098 17.6203 2.66098H18.3802C19.9901 2.66098 21.4346 3.54341 22.1957 4.91494H15.75V6.04193H27.5625C27.8724 6.04193 28.125 6.29437 28.125 6.60542V11.1133H29.25V6.60542C29.25 5.6734 28.4929 4.91494 27.5625 4.91494H23.4506C22.6007 2.8768 20.6122 1.534 18.3797 1.534H17.6198C15.3872 1.534 13.3987 2.8768 12.5488 4.91494H8.4375C7.50712 4.91494 6.75 5.6734 6.75 6.60542V21.8197H7.875V6.60542Z"
+                fill="#303032" />
+                <path d="M34.3125 15.6183V11.1104H33.1875V15.6183H32.0625V13.3644H30.9375V15.6183H29.8125V12.2374H28.6875V15.6183H27.5625V13.3644H26.4375V15.6183H24.7264C24.4401 12.1529 21.5325 9.41992 18 9.41992C14.2779 9.41992 11.25 12.4532 11.25 16.1818C11.25 19.9104 14.2779 22.9437 18 22.9437C21.0071 22.9437 23.6784 20.9213 24.4958 18.0256L23.4129 17.7185C22.7835 19.9487 20.8333 21.5541 18.5619 21.7846V10.5756C21.4003 10.8596 23.6244 13.2652 23.6244 16.1818V16.7453H35.4369V15.6183H34.3125ZM17.4375 10.5756V15.6183H12.4037C12.6681 12.9603 14.7842 10.8405 17.4375 10.5756ZM12.4037 16.7453H17.4375V21.788C14.7842 21.5231 12.6681 19.4033 12.4037 16.7453Z"
+                fill="#303032" />
+                <path d="M27 12.2377V7.16626H9V20.69H10.125V8.29324H25.875V12.2377H27Z" fill="#303032" />
+                <path d="M24.75 30.8365H18.5625V31.9628H24.75V30.8365Z" fill="#303032" />
+                <path d="M24.75 28.5825H18.5625V29.7088H24.75V28.5825Z" fill="#303032" />
+                <path d="M24.75 26.3286H18.5625V27.4549H24.75V26.3286Z" fill="#303032" />
+                <path d="M24.75 24.0746H18.5625V25.201H24.75V24.0746Z" fill="#303032" />
+            </symbol>
             <symbol id="rudder" viewBox="0 0 42 42">
                 <path d="M21 0C9.40205 0 0 9.40205 0 21C0 32.5979 9.40205 42 21 42C32.5979 42 42 32.5979 42 21C41.9869 9.40748 32.5925 0.013125 21 0ZM21 40.6C10.1752 40.6 1.4 31.8248 1.4 21C1.4 10.1752 10.1752 1.4 21 1.4C31.8248 1.4 40.6 10.1752 40.6 21C40.5877 31.8196 31.8196 40.5877 21 40.6Z"
                 fill="#376BC7" />
@@ -1150,6 +1163,13 @@
                             <li><a href="components.html">Components</a>
                             </li>
                         </ul>
+                        <hr>
+                        <ul>
+                            <li><a href="corporate.html">Corporate</a>
+                            </li>
+                            <li><a href="models.html">Model row</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -1163,7 +1183,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/js/uikit-icons.min.js"></script>
 
         <!-- Main scripts. You can replace it, but I recommend you to leave it here     -->
-        <script src="static/js/main8umah8.min.js"></script>
+        <script src="static/js/main.min.js"></script>
     </body>
 
 </html>
