--- a/builds/contacts.html
+++ b/builds/contacts.html
@@ -1380,6 +1380,22 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
+                                                            <div class="uk-width-expand">
+                                                                <a href="#" class="uk-card uk-card-feature">
+                                                                    <div class="uk-card-left">
+                                                                        <div class="uk-card-icon">
+
+                                                                            <svg class="icon__report" width="36px" height="38px">
+                                                                                <use xlink:href="#report"></use>
+                                                                            </svg>
+
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="uk-card-body">
+                                                                        <div class="uk-card-title">Корпоративные продажи</div>
+                                                                    </div>
+                                                                </a>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </li>
