--- a/builds/stock.html
+++ b/builds/stock.html
@@ -1353,7 +1353,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
@@ -1369,7 +1369,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
