--- a/builds/article.html
+++ b/builds/article.html
@@ -1356,7 +1356,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
@@ -1372,7 +1372,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
