--- a/builds/company-history.html
+++ b/builds/company-history.html
@@ -1355,7 +1355,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
@@ -1371,7 +1371,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
