--- a/builds/contacts.html
+++ b/builds/contacts.html
@@ -1364,7 +1364,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
@@ -1380,7 +1380,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
