--- a/builds/home.html
+++ b/builds/home.html
@@ -1352,7 +1352,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
@@ -1368,7 +1368,7 @@
                                                                     </div>
                                                                 </a>
                                                             </div>
-                                                            <div class="uk-width-expand">
+                                                            <div>
                                                                 <a href="#" class="uk-card uk-card-feature">
                                                                     <div class="uk-card-left">
                                                                         <div class="uk-card-icon">
@@ -1843,9 +1843,9 @@
                                                 <div class="uk-card-img">
                                                     <img src="static/img/content/img-9.png" alt="car-1">
                                                 </div>
-                                                <div class="uk-card-body">
+                                                <div class="uk-card-body uk-text-center">
                                                     <h6 class="uk-card-title">Новый Logan</h6>
-                                                    <span>от 1 323 013 грн</span>
+                                                    <span class="uk-text-primary">Уточнить цену</span>
                                                 </div>
                                             </a>
                                         </div>
@@ -1854,9 +1854,9 @@
                                                 <div class="uk-card-img">
                                                     <img src="static/img/content/img-10.png" alt="car-1">
                                                 </div>
-                                                <div class="uk-card-body">
+                                                <div class="uk-card-body uk-text-center">
                                                     <h6 class="uk-card-title">Новый Logan</h6>
-                                                    <span>от 1 323 013 грн</span>
+                                                    <span class="uk-text-primary">Уточнить цену</span>
                                                 </div>
                                             </a>
                                         </div>
@@ -1865,9 +1865,9 @@
                                                 <div class="uk-card-img">
                                                     <img src="static/img/content/img-9.png" alt="car-1">
                                                 </div>
-                                                <div class="uk-card-body">
+                                                <div class="uk-card-body uk-text-center">
                                                     <h6 class="uk-card-title">Новый Logan</h6>
-                                                    <span>от 1 323 013 грн</span>
+                                                    <span class="uk-text-primary">Уточнить цену</span>
                                                 </div>
                                             </a>
                                         </div>
@@ -1876,9 +1876,9 @@
                                                 <div class="uk-card-img">
                                                     <img src="static/img/content/img-10.png" alt="car-1">
                                                 </div>
-                                                <div class="uk-card-body">
+                                                <div class="uk-card-body uk-text-center">
                                                     <h6 class="uk-card-title">Новый Logan</h6>
-                                                    <span>от 1 323 013 грн</span>
+                                                    <span class="uk-text-primary">Уточнить цену</span>
                                                 </div>
                                             </a>
                                         </div>
