--- a/builds/models.html
+++ b/builds/models.html
@@ -1349,7 +1349,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="uk-width-expand">
+                                                <div>
                                                     <a href="#" class="uk-card uk-card-feature">
                                                         <div class="uk-card-left">
                                                             <div class="uk-card-icon">
@@ -1365,7 +1365,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="uk-width-expand">
+                                                <div>
                                                     <a href="#" class="uk-card uk-card-feature">
                                                         <div class="uk-card-left">
                                                             <div class="uk-card-icon">
