changed card model

--- a/markup/pages/corporate.html
+++ b/markup/pages/corporate.html
@@ -98,11 +98,11 @@
                                 <div class="swiper-slide">
                                     <a href="#" class="uk-card-model">
                                         <div class="uk-card-img">
-                                            <img src="%=static=%img/content/img-9.png" alt="car-1">
+                                            <img src="%=static=%img/content/img-10.png" alt="car-1">
                                         </div>
-                                        <div class="uk-card-body">
+                                        <div class="uk-card-body uk-text-center">
                                             <h6 class="uk-card-title">Новый Logan</h6>
-                                            <span>от 1 323 013 грн</span>
+                                            <span class="uk-text-primary">Уточнить цену</span>
                                         </div>
                                     </a>
                                 </div>
@@ -111,20 +111,9 @@
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/img-10.png" alt="car-1">
                                         </div>
-                                        <div class="uk-card-body">
+                                        <div class="uk-card-body uk-text-center">
                                             <h6 class="uk-card-title">Новый Logan</h6>
-                                            <span>от 1 323 013 грн</span>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="#" class="uk-card-model">
-                                        <div class="uk-card-img">
-                                            <img src="%=static=%img/content/img-9.png" alt="car-1">
-                                        </div>
-                                        <div class="uk-card-body">
-                                            <h6 class="uk-card-title">Новый Logan</h6>
-                                            <span>от 1 323 013 грн</span>
+                                            <span class="uk-text-primary">Уточнить цену</span>
                                         </div>
                                     </a>
                                 </div>
@@ -133,9 +122,20 @@
                                         <div class="uk-card-img">
                                             <img src="%=static=%img/content/img-10.png" alt="car-1">
                                         </div>
-                                        <div class="uk-card-body">
+                                        <div class="uk-card-body uk-text-center">
                                             <h6 class="uk-card-title">Новый Logan</h6>
-                                            <span>от 1 323 013 грн</span>
+                                            <span class="uk-text-primary">Уточнить цену</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="uk-card-model">
+                                        <div class="uk-card-img">
+                                            <img src="%=static=%img/content/img-10.png" alt="car-1">
+                                        </div>
+                                        <div class="uk-card-body uk-text-center">
+                                            <h6 class="uk-card-title">Новый Logan</h6>
+                                            <span class="uk-text-primary">Уточнить цену</span>
                                         </div>
                                     </a>
                                 </div>
